[package]
name = "delay_timer"
version = "0.11.3"
authors = ["binchengZhao <binchengZhao@outlook.com>"]
edition = "2018"
repository = "https://github.com/BinChengZhao/delay-timer"
documentation = "https://docs.rs/delay_timer"
readme = "README.md"
homepage = "https://github.com/BinChengZhao/delay-timer"
description = "Time-manager of delayed tasks. Like crontab, but synchronous asynchronous tasks are possible, and dynamic add/cancel/remove is supported."
keywords = [ "cron", "scheduler", "timer", "crontab", "delay" ]
license = "Apache-2.0 OR MIT"
categories = ["development-tools", "data-structures", "asynchronous", "data-structures", "accessibility"]
build = "build/build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "delay_timer"

[features]
default = []

full = ["status-report"]
status-report = []


[dependencies]
cron_clock = "0.8.0"
anyhow = "^1.0.31"
rs-snowflake = "0.6.0"
dashmap = "^4.0.2"
lru = "^0.7.5"
once_cell = "1.9.0"
futures = "^0.3.13"
smol = "^1.2.5"
concat-idents = "1.1.3"
async-trait = "^0.1.48"
event-listener = "^2.5.1"
log = "^0.4.14"
tracing = "0.1.29"
thiserror = "^1.0.24"


tokio = { version = "^1.3.0", features = ["full"] }

[dev-dependencies]
rand = "0.8.4"
surf = "^2.1.0"
tracing-error = { version = "0.1.2" }
tracing-subscriber = "0.2.0"
tokio = { version = "^1.3.0", features = ["full"] }
hyper= {version  = "^0.14.2" , features = ["full"] }
pretty_env_logger = "^0.4"
mockall = "^0.8.2"
env_logger = "^0.8.3"
color-eyre = { version =  "0.5.11", features = ["capture-spantrace", "issue-url"]}
pretty_assertions = "0.6.1"
thiserror = "1.0.19"
ansi-parser = "0.6.5" # used for testing color schemes

[dev-dependencies.async-std]
version = "^1.9.0"
features = ["attributes", "unstable"]

[build-dependencies]
autocfg = "1"
rustc_version = "^0.2"

# Append the cfg-tag:docsrs to activate the feature(doc_cfg) attribute
# when generating a document on docs.rs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Whether to pass `--no-default-features` to Cargo (default: false)
no-default-features = true

[package.metadata.playground]
features = ["full", "test-util"]

[[example]]
name = "cycle_tokio_task"
path = "examples/cycle_tokio_task.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["full"]

#[[test]]
#name = "inspect_struct"
#path = "tests/simulation.rs"
#required-features = ["full"]

#[[bench]]
#name = "demo"
#path = "benches/demo.rs"
#required-features = ["full"]

[profile.dev.package.backtrace]
opt-level = 3